# tutorials

./: README.md
beutiful-soup/: README.md  pyproject.toml  requirements.txt
beutiful-soup-extraction/: the-dom.md
beutiful-soup-extraction/data/: simple-page.html
beutiful-soup-extraction/notebooks/: navigating-the-dom.ipynb  solution.ipynb
beutiful-soup/notebooks/: billboard200.ipynb  billboard200.jsonl  extracting-data-from-the-dom.ipynb  searching-the-dom.ipynb
requests/: README.md  extracting-elements.ipynb  navigate-html.ipynb  pyproject.toml  requirements.txt  searching-the-dom.ipynb
requests/notebooks/: README.md  cctv-api.ipynb  requests-async.ipynb  requests-content.ipynb  requests-intro.ipynb  requests-parameters.ipynb  status-codes.ipynb
requests/tests/: __init__.py
