[tool.poetry]
name = "beutiful-soup-extraction"
version = "0.1.0"
description = "Beutiful Soup Tutorial"
authors = ["Nikos Ves <Nick.ves@glasgow.ac.uk>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
jupyterlab = "^3.6.1"
soupsieve = "^2.4"
pydantic = "^1.10.5"


[tool.poe.tasks]
format = { cmd = "black notebooks" }

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
poethepoet = "^0.18.1"
toml-sort = "^0.22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
