[tool.poetry]
name = "requests-technical-notes"
version = "0.1.0"
description = ""
authors = ["Nikos ves <nick.ves@glasgow.ac.uk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
jupyterlab = "^3.6.1"
aiohttp = "^3.8.4"
pandas = "^1.5.3"

[tool.poe.tasks]
format = { cmd = "black notebooks" }

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
poethepoet = "^0.18.1"
toml-sort = "^0.22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
